# HelloSFML

./: Button.cpp  Button.h  CMakeLists.txt  ClassDiagram.cd  DrawableEntity.h  Enums.h  Game.cpp  Game.h  Music.cpp  Music.h  Scene.cpp  Scene.h  Scoreboard.cpp  Scoreboard.h  Slider.cpp  Slider.h  Tile.cpp  Tile.h  Time.cpp  Time.h  User.cpp  User.h  logowanie.txt  main.cpp  tablicaLatwy.txt  tablicaNormalny.txt  tablicaTrudny.txt
